[project]
name = "motor-oscilator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyQt5==5.15.10",
    "pyqt5-qt5==5.15.2",
    "pyqt5-sip==12.13.0",
    "keyboard>=0.13.5",
    "pyusb>=1.3.1",
    "ticlib>=0.3.0",
]

#[tool.uv.required-environments]
#win_amd64 = true